# api-keys-simplified

./: Cargo.toml  LICENSE  README.md  release-plz.toml  sonar-project.properties
.github/workflows/: ci.yml
crates/api-keys-simplified/: CHANGELOG.md  Cargo.toml  README.md
crates/api-keys-simplified/src/: config.rs  domain.rs  error.rs  generator.rs  hasher.rs  lib.rs  secure.rs  token_parser.rs  validator.rs
crates/api-keys-simplified/tests/: basic.rs  checksum_dos_protection.rs  concurrency.rs  configuration.rs  key_expiry.rs  secure_integration.rs  security.rs  timing.rs  versioning.rs
crates/ci/: Cargo.toml
crates/ci/tests/: ci.rs
src/: config.rs  domain.rs  error.rs  generator.rs  hasher.rs  secure.rs  validator.rs
tests/: basic.rs  configuration.rs  secure_integration.rs  security.rs  timing.rs
