[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
argon2 = "0.5"
password-hash = "0.5"
subtle = "2.6.1"
getrandom = { version = "0.3", features = ["std"] }
base64 = "0.22.1"
thiserror = "2.0.17"
zeroize = { version = "1.8", features = ["derive"] }
blake3 = "1.8.2"
strum = { version = "0.27.2", features = ["derive"] }
lazy_static = "1.5.0"
derive-getters = "0.5.0"
secrecy = { version = "0.10.3" }
regex = "1.11"
chrono = { version = "0.4.42", features = [] }
nom = "8.0.0"
