[package]
name = "api-keys-simplified"
version = "0.1.1"
edition = "2021"
authors = ["Sandipsinh Rathod <sandip@ssdd.dev>"]
readme = "README.md"
license = "Apache-2.0"
description = "Secure API key generation and validation library"
repository = "https://github.com/gpmcp/api-keys-simplified"
keywords = ["api", "security", "authentication", "keys", "crypto"]
categories = ["authentication", "cryptography"]

[dependencies]
argon2.workspace = true
password-hash.workspace = true
subtle.workspace = true
getrandom.workspace = true
base64.workspace = true
thiserror.workspace = true
zeroize.workspace = true
blake3.workspace = true
strum.workspace = true
lazy_static.workspace = true
derive-getters.workspace = true
secrecy.workspace = true
regex.workspace = true
chrono.workspace = true
nom = "8.0.0"

[features]
default = []
expensive_tests = []

[dev-dependencies]
chrono = { version = "0.4.42", features = ["now"] }
